[package]
name = "dark-adapters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = [] }
bevy_asset_loader = { version = "0.17.0", features = ["3d"]}
bevy_common_assets = { version = "0.7.0", features = ["json"] }
bevy_tweening = "0.8.0"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
