[package]
name = "dark-adapters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["bevy_ui", "jpeg"] }
bevy-inspector-egui = "0.19.0"
bevy-ui-navigation = "0.28.0"
bevy_asset_loader = { version = "0.17.0", features = ["3d"] }
bevy_common_assets = { version = "0.7.0", features = ["json"] }
bevy_embedded_assets = "0.8.0"
bevy_mod_picking = { version = "0.15.0", features = ["backend_raycast", "bevy_picking_raycast"] }
bevy_tweening = { version = "0.8.0", features = ["bevy_asset", "bevy_sprite"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
